k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixels
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    app: pixels
